correccion de warnings y errores

--- a/html/negocios.html
+++ b/html/negocios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,6 +26,7 @@
         <source src="../audios/musica-para-motociclistas-9.mp3" type="audio/mpeg">
     </audio>
     <section style="color: white;">
+      <h1 style="color: white;">Negocios</h1>
       <header>
         <nav>
           <ul style="color: white;">
@@ -38,24 +39,25 @@
       <article id="inicio">
         <h2 style="color: darkturquoise;">Gráficos y guía de ganancias empresariales de BTA Online Bikers</h2>
         <img src="../imagenes/negocios.jpg" alt="">
-        <h3>Si bien las empresas introducidas en el DLC de Bikers de <u>GTA Online</u>  no son las empresas más rentables en el juego y vienen con el desafortunado efecto secundario de recibir llamadas telefónicas constantes de LJT quejándose sobre su ética de trabajo, son una excelente manera de obtener un poco de esfuerzo efectivo mientras trabaja en trabajos más eficientes. Echa un vistazo a nuestra guía completa de GTA Online para ganar dinero sobre dónde encajan las empresas Bikers en el esquema de las cosas.</h3>
-        <h3>Sin embargo, maximizar las ganancias de las empresas es clave para que sean una búsqueda que valga la pena, y hay muchos datos que el juego no te dice por adelantado. Es posible que su forma de administrar sus negocios necesite mucha racionalización y optimización, pero ni siquiera lo sabe y, como resultado, las ganancias podrían mejorar significativamente.</h3>
-        <h3>Un gráfico útil elaborado por el usuario de Reddit <u>Echobox419</u> ha reiterado que el bloqueo de cocaína es el negocio más rentable, sin embargo, también se han revelado algunas complejidades adicionales de la mecánica comercial. Al igual que en el caso de nuestra Guía de durabilidad del vehículo, algunos de los sistemas subyacentes aquí no son aparentes para el jugador.</h3>
-        <h3>Las fracciones se suman a un número entero en 5 barras en cada caso, sin embargo, en el medio siempre se crea un exceso de producto, y ese exceso se desperdicia cada vez que cierra un negocio. Tenga en cuenta que estos números provienen de empresas con atributos de Equipo y Personal totalmente actualizados, por lo que las empresas no actualizadas pueden arrojar resultados variados.</h3>
+        <p>Si bien las empresas introducidas en el DLC de Bikers de <u>GTA Online</u>  no son las empresas más rentables en el juego y vienen con el desafortunado efecto secundario de recibir llamadas telefónicas constantes de LJT quejándose sobre su ética de trabajo, son una excelente manera de obtener un poco de esfuerzo efectivo mientras trabaja en trabajos más eficientes. Echa un vistazo a nuestra guía completa de GTA Online para ganar dinero sobre dónde encajan las empresas Bikers en el esquema de las cosas.</p>
+        <p>Sin embargo, maximizar las ganancias de las empresas es clave para que sean una búsqueda que valga la pena, y hay muchos datos que el juego no te dice por adelantado. Es posible que su forma de administrar sus negocios necesite mucha racionalización y optimización, pero ni siquiera lo sabe y, como resultado, las ganancias podrían mejorar significativamente.</p>
+        <p>Un gráfico útil elaborado por el usuario de Reddit <u>Echobox419</u> ha reiterado que el bloqueo de cocaína es el negocio más rentable, sin embargo, también se han revelado algunas complejidades adicionales de la mecánica comercial. Al igual que en el caso de nuestra Guía de durabilidad del vehículo, algunos de los sistemas subyacentes aquí no son aparentes para el jugador.</p>
+        <p>Las fracciones se suman a un número entero en 5 barras en cada caso, sin embargo, en el medio siempre se crea un exceso de producto, y ese exceso se desperdicia cada vez que cierra un negocio. Tenga en cuenta que estos números provienen de empresas con atributos de Equipo y Personal totalmente actualizados, por lo que las empresas no actualizadas pueden arrojar resultados variados.</p>
       </article>
       <article id="jefe">
         <h2 style="color: darkturquoise;">SÉ TU PROPIO JEFE</h2>
         <img src="../imagenes/seTuPropioJefe.png" alt="">
-        <h3>Los jugadores pueden convertirse en vip a través de la opción SecuroServ, en el menú Interacción del jugador, para poder crear su propia organización y ponerle nombre, además de contratar a un máximo de 3 jugadores para que trabajen como escoltas. Los vips pueden recaudar todo el dinero conseguido por la organización y los escoltas, acceder a habilidades especiales, realizar trabajos y desafíos vip, dar munición y blindaje, pedir vehículos nuevos a la carta, y mucho más.</h3>
+        <p>Los jugadores pueden convertirse en vip a través de la opción SecuroServ, en el menú Interacción del jugador, para poder crear su propia organización y ponerle nombre, además de contratar a un máximo de 3 jugadores para que trabajen como escoltas. Los vips pueden recaudar todo el dinero conseguido por la organización y los escoltas, acceder a habilidades especiales, realizar trabajos y desafíos vip, dar munición y blindaje, pedir vehículos nuevos a la carta, y mucho más.</p>
       </article>
       <article id="ejecutiva">
         <h2 style="color: darkturquoise;">LA SUITE EJECUTIVA</h2>
         <img src="../imagenes/ejecutiva.png" alt="">
-        <h3>Antes de nadar en una piscina de billetes, tendrás que ocuparte de los aspectos básicos. Lo primero es comprar una oficina, lo cual te conferirá la función de jefe (amén de todos los beneficios de ser vip) y funcionará a modo de centro de operaciones para tus chanchullos. Personaliza tu oficina con las opciones de decoración disponibles y ponle nombre a tu organización. También podrás elegir otros servicios: una caja fuerte para que veas cómo rebosa de dinero, un área de descanso o un armero para poder personalizar tu arsenal.</h3>
+        <p>Antes de nadar en una piscina de billetes, tendrás que ocuparte de los aspectos básicos. Lo primero es comprar una oficina, lo cual te conferirá la función de jefe (amén de todos los beneficios de ser vip) y funcionará a modo de centro de operaciones para tus chanchullos. Personaliza tu oficina con las opciones de decoración disponibles y ponle nombre a tu organización. También podrás elegir otros servicios: una caja fuerte para que veas cómo rebosa de dinero, un área de descanso o un armero para poder personalizar tu arsenal.</p>
       </article>
     </section>
     <br>
     <section style="color: white;">
+      <h1 style="color: white;">Modalidades</h1>
       <header>
         <nav>
           <ul style="color: white;">
@@ -68,21 +70,22 @@
       <article style="color: white;" id="amigos">
         <h2 style="color: darkturquoise;">Jugando con amigos</h2>
         <img src="../imagenes/amigos.jpg" alt="">
-        <h3>Las cosas cambian significativamente cuando se juega con amigos. Dado que comprar suministros solo le permitirá llenar parcialmente sus barras, una buena técnica aquí es comprar tanto como pueda y luego robar el resto para obtener el máximo rendimiento. Luego, salga y realice otras actividades (las misiones de Importar / Exportar también son más rentables y más rápidas cuando se hacen en grupo) mientras los productos se cocinan, y luego vende todo de una vez por un gran pago.</h3>
+        <p>Las cosas cambian significativamente cuando se juega con amigos. Dado que comprar suministros solo le permitirá llenar parcialmente sus barras, una buena técnica aquí es comprar tanto como pueda y luego robar el resto para obtener el máximo rendimiento. Luego, salga y realice otras actividades (las misiones de Importar / Exportar también son más rentables y más rápidas cuando se hacen en grupo) mientras los productos se cocinan, y luego vende todo de una vez por un gran pago.</p>
       </article>
       <article id="mercanciaEsp">
         <h2 style="color: darkturquoise;">VENDER MERCANCÍA ESPECIAL</h2>
         <img src="../imagenes/mercanciaEsp.png" alt="">
-        <h3>Las misiones de venta son la oportunidad ideal para que el jefe saque tajada de los suministros que ha adquirido con el sudor de su frente, aunque en este caso también es importante tener en cuenta el factor riesgo-recompensa. Vender grandes cantidades llamará la atención de compradores más acaudalados, pero también supondrá un mayor riesgo. Escoge el momento adecuado para vender la mercancía especial para obtener el máximo beneficio posible. La mercancía más solicitada puede deparar mayores ganancias, pero los almacenes con muchas mercancías no pasarán inadvertidos durante mucho tiempo. Ten cuidado con los ataques que puedan realizar las bandas de Los Santos para agenciarse un pedazo de tu pastel.</h3>
+        <p>Las misiones de venta son la oportunidad ideal para que el jefe saque tajada de los suministros que ha adquirido con el sudor de su frente, aunque en este caso también es importante tener en cuenta el factor riesgo-recompensa. Vender grandes cantidades llamará la atención de compradores más acaudalados, pero también supondrá un mayor riesgo. Escoge el momento adecuado para vender la mercancía especial para obtener el máximo beneficio posible. La mercancía más solicitada puede deparar mayores ganancias, pero los almacenes con muchas mercancías no pasarán inadvertidos durante mucho tiempo. Ten cuidado con los ataques que puedan realizar las bandas de Los Santos para agenciarse un pedazo de tu pastel.</p>
       </article>
       <article id="investigacion">
         <h2 style="color: darkturquoise;">INVESTIGACIÓN Y PRODUCCIÓN</h2>
         <img src="../imagenes/investigacion.png" alt="">
-        <h3>Además de fabricar los productos que vas a vender, puedes rentabilizar aún más al personal de laboratorio de tu búnker si lo dedicas a la investigación para desbloquear diversas mejoras opcionales, como modificaciones únicas de armas personales, una amplia gama de tecnología brutal para los vehículos armados, y mejoras terroríficas para el Centro de Operaciones Móvil.</h3>
+        <p>Además de fabricar los productos que vas a vender, puedes rentabilizar aún más al personal de laboratorio de tu búnker si lo dedicas a la investigación para desbloquear diversas mejoras opcionales, como modificaciones únicas de armas personales, una amplia gama de tecnología brutal para los vehículos armados, y mejoras terroríficas para el Centro de Operaciones Móvil.</p>
       </article>
     </section>
     <br>
     <section>
+        <h1 style="color: white;">Mejores y peores negocios</h1>
         <header>
           <nav style="color: white;">
             <ul>
@@ -110,6 +113,7 @@
     </section>
     <br>
     <section>
+      <h1 style="color: white;">Centros de operaciones</h1>
       <header>
         <nav>
           <ul style="color: white;">
@@ -122,12 +126,12 @@
       <article id="opMov" style="color: white;">
         <h2 style="color: darkturquoise;">CENTRO DE OPERACIONES MÓVIL</h2>
         <img src="../imagenes/opMovil.png" alt="">
-        <h3>Para las operaciones tácticas móviles más complicadas, los traficantes de armas pueden invertir en un Centro de Operaciones Móvil (COM), que es el tipo de apoyo pesado con el que únicamente suelen contar los asesinos bien entrenados o las potencias nucleares renegadas. El diseño modular y móvil del COM permite diversas configuraciones a medida como taller de vehículos, taller de armas, vivienda de lujo y centro de mando, con instalaciones para mejorar y personalizar tu arsenal, y para modificar vehículos armados (incluidas torretas para tu COM que tu equipo pueda controlar). Todo está al alcance de la mano y puedes llevártelo contigo mediante un camión con remolque comercial totalmente personalizable.</h3>
+        <p>Para las operaciones tácticas móviles más complicadas, los traficantes de armas pueden invertir en un Centro de Operaciones Móvil (COM), que es el tipo de apoyo pesado con el que únicamente suelen contar los asesinos bien entrenados o las potencias nucleares renegadas. El diseño modular y móvil del COM permite diversas configuraciones a medida como taller de vehículos, taller de armas, vivienda de lujo y centro de mando, con instalaciones para mejorar y personalizar tu arsenal, y para modificar vehículos armados (incluidas torretas para tu COM que tu equipo pueda controlar). Todo está al alcance de la mano y puedes llevártelo contigo mediante un camión con remolque comercial totalmente personalizable.</p>
       </article>
       <article id="merEsp" style="color: white;">
         <h2 style="color: darkturquoise;">COMPRAR MERCANCÍA ESPECIAL</h2>
         <img src="../imagenes/comprarmercanciaEsp.png" alt="">
-        <h3>Solo los jefes pueden acceder a las misiones de mercancía especial. Se trata de misiones peligrosas de varias partes que precisan tener socios muy bien coordinados para superarlas. El tamaño y el objetivo de las misiones de compra varían: desde operaciones policíacas encubiertas a persecuciones a toda velocidad, emboscadas aéreas y mucho más. Planifica tu misión con cuidado y escoge el momento adecuado, ten siempre en mente dónde están tus almacenes, asegúrate de contratar a socios hábiles que puedan controlar bien el tamaño del cargamento, mantén a tus contactos telefónicos y las habilidades de jefe a mano y, sobre todo, ten en cuenta el factor riesgo-recompensa.</h3>
+        <p>Solo los jefes pueden acceder a las misiones de mercancía especial. Se trata de misiones peligrosas de varias partes que precisan tener socios muy bien coordinados para superarlas. El tamaño y el objetivo de las misiones de compra varían: desde operaciones policíacas encubiertas a persecuciones a toda velocidad, emboscadas aéreas y mucho más. Planifica tu misión con cuidado y escoge el momento adecuado, ten siempre en mente dónde están tus almacenes, asegúrate de contratar a socios hábiles que puedan controlar bien el tamaño del cargamento, mantén a tus contactos telefónicos y las habilidades de jefe a mano y, sobre todo, ten en cuenta el factor riesgo-recompensa.</p>
       </article>
       <article id="tabla">
         <h2 style="color: darkturquoise;">Tabla</h2>
@@ -307,9 +311,9 @@
     </section>
     <hr>
     <footer style="color: white;">
-        <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
-        <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></p>
-        <p>© Todos los derechos recervados</p>
+        <span>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></span>
+        <span>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></span>
+        <span>© Todos los derechos recervados</span>
     </footer>
 </body>
 </html>
