--- a/html/Noticias.html
+++ b/html/Noticias.html
@@ -24,47 +24,42 @@
     </header>
     <br>
     <section>
+        <img src="../imagenes/arenaWar.png" alt="">
+        <h1 style="color: white;">Descuento triple</h1>
         <article>
-            <img src="../imagenes/arenaWar.png" alt="">
+            <h2 style="color: white;">Triple de GTA$ y RP en Motor Wars del
+                26 de marzo al 1 de abril</h2>
             <aside>
-                <h1 style="color: white;">Triple de GTA$ y RP en Motor Wars del
-                    26 de marzo al 1 de abril</h1>
-                <h1 style="color: white;">Rebaja del 60 % en el Mammoth Avenger hasta el 1 de abril en Warstock Cache & Carry</h1>
-                <h1 style="color: white;">Además, triple de recompensas en Motor Wars y descuentos en instalaciones, vehículos y muchas cosas más</h1>
+                <p style="color: white;">Rebaja del 60 % en el Mammoth Avenger hasta el 1 de abril en Warstock Cache & Carry</p>
+                <p style="color: white;">Además, triple de recompensas en Motor Wars y descuentos en instalaciones, vehículos y muchas cosas más</p>
             </aside>
         </article> 
     </section>
     <section>
-        <article style="color: white;">
-            <img src="../imagenes/instalaciones.png" alt="">
-            <aside>
-                <h1>50 % de descuento en instalaciones</h1>
-            </aside>
+        <img src="../imagenes/instalaciones.png" alt="">
+        <h2 style="color: white;">50 % de descuento en instalaciones</h2>
+        <article style="color: white;">   
             <img src="../imagenes/desIns.png" alt="">
-            <aside>
-                <h1>60 % de descuento en modificaciones de instalaciones</h1>
-            </aside>
+            <h2>60 % de descuento en modificaciones de instalaciones</h2>
             <img src="../imagenes/tallerDes.png" alt="">
             <aside>
-                <h1>60 % de descuento en el taller del vehículo armado Avenger</h1>
+                <p>60 % de descuento en el taller del vehículo armado Avenger</p>
             </aside>
         </article>
     </section>
     <br>
     <section>
-        <article style="color: white;">
-            <h1>Bonificaciones y ventajas de Twitch Prime</h1>
+        <h1 style="color: white;">Bonificaciones y ventajas de Twitch Prime</h1>
+        <article style="color: white;"> 
             <img src="../imagenes/juegos.png" alt="">
-            <aside>
-                Además de un descuento adicional del 10 % que se suma a todos los detallados previamente, los jugadores de GTA Online que vinculen su cuenta de Twitch Prime a la del Social Club de Rockstar Games podrán conseguir el salón recreativo Pixel Pete's de Paleto Bay gratis a través de un reembolso completo del precio base, y una rebaja del 80 % en propiedades del Maze Bank Oeste y en el club nocturno de Misson Row. No olvides visitar Twitch Prime y registrarte si no quieres perderte ninguna de las ventajas futuras.
-            </aside>
+            <h2>Además de un descuento adicional del 10 % que se suma a todos los detallados previamente, los jugadores de GTA Online que vinculen su cuenta de Twitch Prime a la del Social Club de Rockstar Games podrán conseguir el salón recreativo Pixel Pete's de Paleto Bay gratis a través de un reembolso completo del precio base, y una rebaja del 80 % en propiedades del Maze Bank Oeste y en el club nocturno de Misson Row. No olvides visitar Twitch Prime y registrarte si no quieres perderte ninguna de las ventajas futuras.</h2>
         </article>
     </section>
     <hr>
     <footer style="color: white;">
-        <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
-        <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></p>
-        <p>© Todos los derechos recervados</p>
+        <span>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></span>
+        <span>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">:cpenaf@est.ups.edu.ec</a></span>
+        <span>© Todos los derechos recervados</span>
     </footer>
 </body>
 </html>
