--- a/html/actividades.html
+++ b/html/actividades.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,62 +24,62 @@
     <br>
     <section>
         <h2 style="text-align: center;color: white;">ACTIVIDADES</h2>
-        <h1 style="color: white;">Los Santos y el condado de Blaine ofrecen numerosas oportunidades a los criminales más ambiciosos. Acepta misiones y una amplia gama de actividades en solitario, junto a tu Crew o en colaboración con colegas mercenarios y degenerados. Realiza todo tipo de atracos y actividades ilícitas, como por ejemplo:</h1>
+        <p style="color: white;">Los Santos y el condado de Blaine ofrecen numerosas oportunidades a los criminales más ambiciosos. Acepta misiones y una amplia gama de actividades en solitario, junto a tu Crew o en colaboración con colegas mercenarios y degenerados. Realiza todo tipo de atracos y actividades ilícitas, como por ejemplo:</p>
         <article style="color: white;">
             <img src="../imagenes/carrera.png" alt="">
+            <h3>CARRERA</h3>
             <aside>
-                <h3>CARRERA</h3>
-                <h2>Ya sea sobre dos o cuatro ruedas, por aire o por mar, terminar el primero es un pasatiempo famoso en Los Santos. Hay muchas carreras en las que participar, desde aquellas por caminos de tierra que levantan polvo, hasta carreras de velocidad en lancha, pasando por carreras aéreas ilegales en las que vuelas bajo, y que suponen una sentencia de muerte.</h2>
+                <p>Ya sea sobre dos o cuatro ruedas, por aire o por mar, terminar el primero es un pasatiempo famoso en Los Santos. Hay muchas carreras en las que participar, desde aquellas por caminos de tierra que levantan polvo, hasta carreras de velocidad en lancha, pasando por carreras aéreas ilegales en las que vuelas bajo, y que suponen una sentencia de muerte.</p>
             </aside>
         </article>
         <article style="color: white;">
             <img src="../imagenes/partidasMuerte.png" alt="">
+            <h2>PARTIDAS A MUERTE</h2>
             <aside>
-                <h2>PARTIDAS A MUERTE</h2>
-                <h1>¿Has subido al máximo tu estadística de estado mental? Si te mueres de ganas de apretar el gatillo y sufres de un sano desdén por tu propia seguridad, puede que las partidas a muerte sean la forma perfecta de desahogarte. Encontrarás partidas a muerte por todo Los Santos y el condado de Blaine, y si perteneces a una Crew que piensa como tú, puedes enfrentarte a otros en partidas a muerte por equipos. Si vais a derramar sangre, hacedlo juntos.</h1>
+                <p>¿Has subido al máximo tu estadística de estado mental? Si te mueres de ganas de apretar el gatillo y sufres de un sano desdén por tu propia seguridad, puede que las partidas a muerte sean la forma perfecta de desahogarte. Encontrarás partidas a muerte por todo Los Santos y el condado de Blaine, y si perteneces a una Crew que piensa como tú, puedes enfrentarte a otros en partidas a muerte por equipos. Si vais a derramar sangre, hacedlo juntos.</p>
             </aside>
         </article>
         <article style="color: white;">
             <img src="../imagenes/ulEquiPie.png" alt="">
+            <h2>ÚLTIMO EQUIPO EN PIE</h2>
             <aside>
-                <h2>ÚLTIMO EQUIPO EN PIE</h2>
-                <h1>El modo más arriesgado de GTA Online te da solo una vida: úsala con cabeza. Se trata de resistir e imponerse en un enfrentamiento entre dos equipos, y lo único que importa es permanecer vivo hasta el fina</h1>
+                <p>El modo más arriesgado de GTA Online te da solo una vida: úsala con cabeza. Se trata de resistir e imponerse en un enfrentamiento entre dos equipos, y lo único que importa es permanecer vivo hasta el fina</p>
             </aside>
         </article>
         <article style="color: white;">
             <img src="../imagenes/paracaidismo.png" alt="">
+            <h2>PARACAIDISMO</h2>
             <aside>
-                <h2>PARACAIDISMO</h2>
-                <h1>Si lo que te gusta es dirigirte a toda pastilla hacia el suelo a merced de un trozo de cuerda, en Los Santos y el condado de Blaine encontrarás muchos saltos en paracaídas que te subirán la adrenalina. Navega con destreza a través de los objetivos y aterriza en el lugar correcto (de una pieza) para ganar.</h1>
+                <p>Si lo que te gusta es dirigirte a toda pastilla hacia el suelo a merced de un trozo de cuerda, en Los Santos y el condado de Blaine encontrarás muchos saltos en paracaídas que te subirán la adrenalina. Navega con destreza a través de los objetivos y aterriza en el lugar correcto (de una pieza) para ganar.</p>
             </aside>
         </article>
         <article style="color: white;">
             <img src="../imagenes/capturas.png" alt="">
+            <h2>CAPTURAS</h2>
             <aside>
-                <h2>CAPTURAS</h2>
-                <h1>Captura es una vuelta de tuerca de GTA a los enfrentamientos de atrapar la bandera donde varios equipos compiten entre sí con escaramuzas para tomar el control de vehículos y del preciado contrabando.</h1>
+                <p>Captura es una vuelta de tuerca de GTA a los enfrentamientos de atrapar la bandera donde varios equipos compiten entre sí con escaramuzas para tomar el control de vehículos y del preciado contrabando.</p>
             </aside>
         </article>    
         <article style="color: white;">
             <img src="../imagenes/supervivencia.png" alt="">
+            <h2>PARTIDAS DE SUPERVIVENCIA</h2>
             <aside>
-                <h2>PARTIDAS DE SUPERVIVENCIA</h2>
-                <h1>Si se te hace la boca agua con la expresión "contra todo pronóstico", entonces las partidas de supervivencia son para ti. Hasta cuatro jugadores deben hacer frente a 10 oleadas de enemigos cada vez más hostiles para ver quiénes serán los únicos supervivientes. No aptas para pusilánimes.</h1>
+                <p>Si se te hace la boca agua con la expresión "contra todo pronóstico", entonces las partidas de supervivencia son para ti. Hasta cuatro jugadores deben hacer frente a 10 oleadas de enemigos cada vez más hostiles para ver quiénes serán los únicos supervivientes. No aptas para pusilánimes.</p>
             </aside>
         </article>
         <article style="color: white;">
             <img src="../imagenes/golpesAct.jpg" alt="">
+            <h2>GOLPES</h2>
             <aside>
-                <h2>GOLPES</h2>
-                <h1>Una experiencia cooperativa para 4 jugadores en Grand Theft Auto Online que ofrece la posibilidad de agruparse para llevar a cabo una serie de intensos golpes en varias fases, con asaltos y atracos por todo Los Santos y el condado de Blaine.</h1>
+                <p>Una experiencia cooperativa para 4 jugadores en Grand Theft Auto Online que ofrece la posibilidad de agruparse para llevar a cabo una serie de intensos golpes en varias fases, con asaltos y atracos por todo Los Santos y el condado de Blaine.</p>
             </aside>
         </article>
     </section>
     <hr>
     <footer style="color: white;">
-        <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
-        <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></p>
-        <p>© Todos los derechos recervados</p>
+        <span>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></span>
+        <span>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></span>
+        <span>© Todos los derechos recervados</span>
     </footer>
 </body>
 </html>
