--- a/html/autos.html
+++ b/html/autos.html
@@ -22,9 +22,10 @@
          </nav>
     </header>
     <section>
+        <h2 style="text-align: center;">Aturos</h2>
         <article style="color: white;">
             <h2 style="text-align: center;">Autos de lujo</h2>
-            <h3>Hay vehículos exclusivos en el modo individual que no hacen aparición en GTA Online y viceversa. Como también se han añadido una gran cantidad de deportivos como el Jester y superdeportivos como el Zentorno. Hasta la Actualización Dinero Sucio Parte 2 los siguientes vehículos que serán lanzados ya no estarán disponibles en modo campaña.</h3>
+            <p>Hay vehículos exclusivos en el modo individual que no hacen aparición en GTA Online y viceversa. Como también se han añadido una gran cantidad de deportivos como el Jester y superdeportivos como el Zentorno. Hasta la Actualización Dinero Sucio Parte 2 los siguientes vehículos que serán lanzados ya no estarán disponibles en modo campaña.</p>
         </article>
         <img src="../imagenes/Emerus-GTAO.png" alt="">
         <img src="../imagenes/Reaper.jpg" alt="" width="250">
@@ -39,24 +40,24 @@
     </section>
     <br>
     <section style="background-color:bisque;">
+        <h2><strong>Algunas marcas reconocidas dentro del juego</strong></h2>
         <article>
-            <h2><strong>Algunas marcas reconocidas dentro del juego</strong></h2>
             <h2>Lampadati</h2>
-            <h3><q>Una empresa italiana de coches de lujo fundada en Polonia a principios del siglo XX y que se dedicó a los coches de carreras. Tras no conseguir ganar muchos grandes premios, se centraron en fabricar coches deportivos que impresionan a las mujeres casquivanas. Esto si que lo han conseguido. Y muy bien por cierto.</q></h3>
+            <p><q>Una empresa italiana de coches de lujo fundada en Polonia a principios del siglo XX y que se dedicó a los coches de carreras. Tras no conseguir ganar muchos grandes premios, se centraron en fabricar coches deportivos que impresionan a las mujeres casquivanas. Esto si que lo han conseguido. Y muy bien por cierto.</q></p>
             <br>
-            <h2>Windsor</h2>
+            <p>Windsor</p>
             <h3><q>Al desdibujar los límites entre un automóvil y una mansión de un aristócrata inglés, este coche podría darle un aura de clase y buen gusto hasta a un fan del nu metal. El inútil fabricante creó una aerodinámica tan patética y un chasis tan pesado que este motor de doble turbo apenas da para manejar despacio mientras eliges a una prostituta, pero eso es parte de (o todo) su encanto británico.</q></h3>
-            <br>
+            <p>
             <h2>Zion Cabrio</h2>
-            <h3><q>Ingeniería y diseño alemanes tomados muy, muy en serio. Se garantiza que este modelo de Zion descapotable le levantará el peluquín a cualquier ejecutivo sénior.</q></h3>
+            <p><q>Ingeniería y diseño alemanes tomados muy, muy en serio. Se garantiza que este modelo de Zion descapotable le levantará el peluquín a cualquier ejecutivo sénior.</q></p>
             <br>
         </article>
     </section>
     <hr>
     <footer style="color: white;">
-        <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
-        <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></p>
-        <p>© Todos los derechos recervados</p>
+        <span>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></span>
+        <span>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></span>
+        <span>© Todos los derechos recervados</span>
     </footer>
 </body>
 </html>
