--- a/html/golpes.html
+++ b/html/golpes.html
@@ -26,31 +26,31 @@
         <source src="../audios/rain.mp3" type="audio/mpeg">
     </audio>
     <section>
+        <h2 style="color: white;">Pasos ha realizar</h2>
         <article>
             <h3 style="color: bisque">GOLPES</h3>
-            <h1 style="color: bisque">Una experiencia cooperativa para 4 jugadores en Grand Theft Auto Online que ofrece la posibilidad de agruparse para llevar a cabo una serie de intensos golpes en varias fases, con asaltos y atracos por todo Los Santos y el condado de Blaine.</h1>
+            <p style="color: bisque">Una experiencia cooperativa para 4 jugadores en Grand Theft Auto Online que ofrece la posibilidad de agruparse para llevar a cabo una serie de intensos golpes en varias fases, con asaltos y atracos por todo Los Santos y el condado de Blaine.</p>
         </article>
         <article>
             <img src="../imagenes/planeaEjecuta.jpg" alt="">
             <h3 style="color: bisque">PLANEA Y EJECUTA</h3>
-            <h1 style="color: bisque">Los golpes en línea abarcan numerosas misiones que introducen nuevos elementos de juego, vehículos, armas y situaciones para poner a prueba las habilidades de los equipos: desde el hackeo de ordenadores, hasta la infiltración, pasando por la precisión en la conducción, la habilidad como piloto, la puntería, el paracaidismo y muchas más cosas.</h1>
+            <p style="color: bisque">Los golpes en línea abarcan numerosas misiones que introducen nuevos elementos de juego, vehículos, armas y situaciones para poner a prueba las habilidades de los equipos: desde el hackeo de ordenadores, hasta la infiltración, pasando por la precisión en la conducción, la habilidad como piloto, la puntería, el paracaidismo y muchas más cosas.</p>
         </article>
         <article>
             <img src="../imagenes/equipos.jpg" alt="">
             <h3 style="color: bisque">EQUIPOS DE 4 JUGADORES, 4 MANERAS DE JUGAR</h3>
-            <h1 style="color: bisque;">Elegid vuestros papeles y planead la estrategia para cada fase. La comunicación y la coordinación serán claves. Algunas misiones requerirán que trabajéis unidos, mientras que otras separarán a los miembros para completar objetivos clave. Vuelve a jugar cada golpe desde diferentes perspectivas de la acción y completa los desafíos de élite para conseguir más dinero.</h1>
+            <p style="color: bisque;">Elegid vuestros papeles y planead la estrategia para cada fase. La comunicación y la coordinación serán claves. Algunas misiones requerirán que trabajéis unidos, mientras que otras separarán a los miembros para completar objetivos clave. Vuelve a jugar cada golpe desde diferentes perspectivas de la acción y completa los desafíos de élite para conseguir más dinero.</p>
         </article>
         <article>
             <img src="../imagenes/reunete.jpg" alt="">
             <h3 style="color: bisque;">REÚNE A TU EQUIPO</h3>
-            <h1 style="color: bisque;">Crea una Crew o únete a las que ya hay para ganar recompensas adicionales en RP mientras juegas.</h1>
-        </article>
+            <p style="color: bisque;">Crea una Crew o únete a las que ya hay para ganar recompensas adicionales en RP mientras juegas.</p>      </article>
     </section>
     <hr>
     <footer style="color: white;">
-        <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
-        <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></p>
-        <p>© Todos los derechos recervados</p>
+        <span>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></span>
+        <span>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">cpenaf@est.ups.edu.ec</a></span>
+        <span>© Todos los derechos recervados</span>
     </footer>
 </body>
 </html>
