--- a/html/videosDeLaComunidad.html
+++ b/html/videosDeLaComunidad.html
@@ -22,34 +22,30 @@
          </nav>
     </header>
     <section>
-        <article>
-            <h2 style="color: chocolate;">Videos de la comunidad</h2>
-            <h1 style="color: white;">Estos videos son realizados por la comunidad de <mark>GTA online</mark> para demostrar el como se convive dentro del videojuego</h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/K8mR9H804-0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/2vW58ewyP2k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="279" height="115" src="https://www.youtube.com/embed/MShjruLMh2I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="279" height="115" src="https://www.youtube.com/embed/irN6bn1-e44" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="278" height="115" src="https://www.youtube.com/embed/BrqE_hFW9TA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="278" height="115" src="https://www.youtube.com/embed/6QpKlw5Iu9M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </article>
+        <h2 style="color: chocolate;">Videos de la comunidad</h2>
+        <p style="color: white;">Estos videos son realizados por la comunidad de <mark>GTA online</mark> para demostrar el como se convive dentro del videojuego</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/K8mR9H804-0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/2vW58ewyP2k" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="279" height="115" src="https://www.youtube.com/embed/MShjruLMh2I" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="279" height="115" src="https://www.youtube.com/embed/irN6bn1-e44" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="278" height="115" src="https://www.youtube.com/embed/BrqE_hFW9TA" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="278" height="115" src="https://www.youtube.com/embed/6QpKlw5Iu9M" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <section>
-        <article>
-            <h2 style="color: chocolate;">Cinematicas del GTA</h2>
-            <h1 style="color: white;">En esta seccion podras disfrutar de tus <mark>cinematicas</mark> favoritas</h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/LqDAPKDDpJA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Ge4TzpmGDXo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="279" height="115" src="https://www.youtube.com/embed/N-xHcvug3WI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="279" height="115" src="https://www.youtube.com/embed/aoOQuCXvFM0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="278" height="115" src="https://www.youtube.com/embed/7rEuY4x4zU4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="278" height="115" src="https://www.youtube.com/embed/2eaG7MVaqD8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </article>   
+        <h2 style="color: chocolate;">Cinematicas del GTA</h2>
+        <h1 style="color: white;">En esta seccion podras disfrutar de tus <mark>cinematicas</mark> favoritas</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/LqDAPKDDpJA" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Ge4TzpmGDXo" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="279" height="115" src="https://www.youtube.com/embed/N-xHcvug3WI" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="279" height="115" src="https://www.youtube.com/embed/aoOQuCXvFM0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="278" height="115" src="https://www.youtube.com/embed/7rEuY4x4zU4" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="278" height="115" src="https://www.youtube.com/embed/2eaG7MVaqD8" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <hr>
     <footer style="color: white;">
-        <p>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></p>
-        <p>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">:cpenaf@est.ups.edu.ec</a></p>
-        <p>© Todos los derechos recervados</p>
+        <span>Call: <a href="tel:0990791348" style="color: white;">+593 0990791348</a></span>
+        <span>Email: <a href="mailto:cpenaf@est.ups.edu.ec" style="color: white;">:cpenaf@est.ups.edu.ec</a></span>
+        <span>© Todos los derechos recervados</span>
     </footer>
 </body>
 </html>
